# sfelib_gmsh

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt  sfelib_gmsh.cpp  sfelib_gmsh.hpp
models/: almond  circle  cylinder  sphere
src/: CMakeLists.txt  sfelib_gmsh_kernals.cpp
